Status map: include "Abnormal Exit".
Updates to the recent status map:

enum ExecutionStatus {
  Invalid = 0,
  Failed,
  Passed,
  Timedout,
  Crashed,
  AbnormalExit,
  DryRun
};

--- a/layout/index.slim
+++ b/layout/index.slim
@@ -206,6 +206,8 @@ html
                       span.label.label-default = mutation.status
                     - if mutation.crashed?
                       span.label.label-danger = mutation.status
+                    - if mutation.abnormal_exit?
+                      span.label.label-danger = mutation.status
                     - if mutation.dryRun?
                       span.label.label-info = mutation.status
 
