Render debug info if its there

--- a/layout/index.slim
+++ b/layout/index.slim
@@ -2,6 +2,11 @@ doctype html
 html
   head
     title Mull Report | #{ctx.project_name}
+    link href="/html-reports/css/bootstrap.css" rel='stylesheet' type='text/css'
+    link href="/html-reports/css/custom.css" rel='stylesheet' type='text/css'
+    link href="/html-reports/js/bootstrap.min.js" rel='script' type='text/javascript'
+    link href="/html-reports/js/jquery.js" rel='script' type='text/javascript'
+
     link href="css/bootstrap.css" rel='stylesheet' type='text/css'
     link href="css/custom.css" rel='stylesheet' type='text/css'
     link href="js/bootstrap.min.js" rel='script' type='text/javascript'
