--- a/layout/debug.slim
+++ b/layout/debug.slim
@@ -24,23 +24,23 @@ html
               h4.list-group-item-heading = point.unique_id
 
               div.list-group
-                / div.list-group-item.list-group-item
-                /   | function:
+                div.list-group-item.list-group-item
+                  | function:
                 div.list-group-item.list-group-item.pre
                   div.source-code = point.function
 
-                / div.list-group-item.list-group-item
-                /   | basic block:
-                / div.list-group-item.list-group-item.pre
-                /   div.source-code = point.basic_block
+                div.list-group-item.list-group-item
+                  | basic block:
+                div.list-group-item.list-group-item.pre
+                  div.source-code = point.basic_block
 
-                / div.list-group-item.list-group-item
-                /   | instruction:
+                div.list-group-item.list-group-item
+                  | instruction:
                 div.list-group-item.list-group-item.pre
                   div.source-code = point.instruction
 
-                / div.list-group-item.list-group-item
-                /   | instruction:
+                div.list-group-item.list-group-item
+                  | source:
                 div.list-group-item.list-group-item.pre
                   div.source-code = point.source
 
